composer.json name fix

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ventaframework/container",
+    "name": "ventaframework/http",
     "description": "Venta Framework Container package",
     "authors": [
         {
