Remove redundant classes. Add single response factory for all factory contracts implementation.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         {
             "name": "Alexey Rehov",
             "email": "aleksejs@scandiweb.com"
+        },
+        {
+            "name": "Vsevolods Mihailovs",
+            "email": "vsevolods@scandiweb.com"
         }
     ],
     "autoload": {
