--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "abava/http",
-    "description": "The Abava Http package",
+    "name": "venta/http",
+    "description": "The Venta Http package",
     "authors": [
         {
             "name": "Konstantins Zukovs",
@@ -21,7 +21,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Abava\\Http\\": "/"
+            "Venta\\Http\\": ""
         },
         "exclude-from-classmap": [
             "/tests/"
@@ -32,6 +32,7 @@
         "phpunit/phpunit": "^5.4"
     },
     "require": {
+        "php": "^7.0",
         "psr/http-message": "^1.0",
         "zendframework/zend-diactoros": "^1.3"
     }
