--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require": {
         "php": "^7.0",
-        "psr/http-message": "^1.0",
+        "venta/contracts": "dev-master",
         "zendframework/zend-diactoros": "^1.3"
     }
 }
