Update package definition.

--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,35 @@
 {
     "name": "venta/http",
-    "description": "The Venta Http package",
+    "description": "The Venta Http package.",
+    "keywords": [
+        "venta",
+        "http"
+    ],
     "authors": [
         {
-            "name": "Konstantins Zukovs",
-            "email": "kz@scandiweb.com"
+            "name": "Venta Core Team",
+            "email": "team@venta.io"
         },
         {
-            "name": "Alexey Rehov",
-            "email": "aleksejs@scandiweb.com"
-        },
-        {
-            "name": "Vsevolods Mihailovs",
-            "email": "vsevolods@scandiweb.com"
-        },
-        {
-            "name": "Ilja Lapkovskis",
-            "email": "ilja@scandiweb.com"
+            "name": "Venta Community",
+            "homepage": "https://github.com/venta/http/contributors"
         }
     ],
-    "autoload": {
-        "psr-4": {
-            "Venta\\Http\\": "src/"
-        }
-    },
-    "minimum-stability": "dev",
-    "require-dev": {
-        "phpunit/phpunit": "^5.4"
+    "support": {
+        "issues": "https://github.com/venta/framework/issues"
     },
     "require": {
         "php": "^7.0",
         "venta/contracts": "dev-master",
         "zendframework/zend-diactoros": "^1.3"
-    }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "Venta\\Http\\": "src/"
+        }
+    },
+    "minimum-stability": "dev"
 }
